--- a/overthink/index.html
+++ b/overthink/index.html
@@ -174,8 +174,9 @@
     </div>
     <div class="body">
       <pre>
-        <div class="prompt"><span class="command">dont.do/overthink, this life is temporary</span><span class="pulse">_</span></div></pre>
+        <div class="prompt"><span class="command">dont.do/overthink, this life is temporary</span><span class="pulse">_</span></div>
         <div class="comment"># please@dont.do</div>
+      </pre>
     </div>
   </div>
 </body>
